<resources>
    <string name="app_name">Deliveryteka</string>
    <string name="login">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="enter_your_phone">Введите номер телефона</string>
    <string name="enter_your_password">Введите пароль</string>
    <string name="repeat_your_password">Повторите пароль</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Корзина</string>
    <string name="catalog">Каталог</string>
    <string name="orders">Заказы</string>
    <string name="profile">Профиль</string>
    <string name="favorite">Избранное</string>
    <string name="main_menu">Главное меню</string>
    <string name="no_order">Нет заказов</string>
    <string name="select_products_from_the_catalog_and_place_an_order">Выберите товары из каталога и сделайте заказ</string>
    <string name="return_home">Вернуться в меню</string>
    <string name="your_basket_empty">Ваша корзина пуста</string>
    <string name="select_product_and_add_to_basket">Выберите товары и добавьте в корзину</string>
    <string name="change_password">Изменить пароль</string>
    <string name="your_number_phone">Ваш номер телефона</string>
    <string name="your_address">Ваш адрес не указан</string>
    <string name="your_name">Ваше имя не указано</string>
    <string name="save">Сохранить</string>
    <string name="street">Улица</string>
    <string name="house_housing">Дом/Корпус</string>
    <string name="entrance">Подъезд</string>
    <string name="apartment">Квартира</string>
    <string name="sign_out">Выйти</string>
    <string name="repeat_new_password">Повторите новый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="current_password">Текущий пароль</string>
    <string name="passwords_dont_match">Пароли не совпадает!</string>
    <string name="not_all_fields_filled">Вы ввели данные не во все поля!</string>
    <string name="enter_number_phone_correctly">Введите правильно номер телефона!</string>
    <string name="medicine_card">Карта мед.обслуживания</string>
    <string name="medicine_card_code">Код из 16 цифр</string>
    <string name="official_website">Оффициальный сайт</string>
    <string name="gleb_komarov_vk">Глеб Комаров(Вконтакте)</string>
    <string name="roman_lyschyk_vk">Лыщик Роман(Вконтакте)</string>
    <string name="about_service">О сервисе</string>
    <string name="order_comment">Комментарий к заказу</string>
    <string name="payment_by_card">Оплата картой</string>
    <string name="payment_by_cash">Оплата наличными</string>
    <string name="number_bank_card">Номер банковской карты</string>
    <string name="bank_card_validity_period">Срок действия банковской карты</string>
    <string name="make_order">Оформить заказ</string>
    <string name="second_name_bank_card">Фамилия владельца карты</string>
    <string name="name_bank_card">Имя владельца карты</string>
    <string name="data_no_loading">Данные об лекарствах не смогли загрузиться!</string>
    <string name="repeat_load">Повторить загрузку</string>
    <string name="no_data_for_query">Нет результатов по данному запросу!</string>
    <string name="search">Поиск</string>
    <string name="add_cart">Добавить в корзину</string>
    <string name="open_pdf_manual">Открыть PDF инструкцию</string>
    <string name="not_specified_medicine_card">Карта мед. обслуживания не указана</string>
    <string name="pandemic">Ковид-19</string>
    <string name="frequently_observed_symptoms">Часто наблюдаемые симптомы</string>
    <string name="symptoms">повышение температуры тела; \nсухой кашель; \nутомляемость.</string>
    <string name="prevention_covid_19">Профилактика COVID-19</string>
    <string name="prevention">
        Соблюдайте правила гигиены рук.\n
        Часто мойте руки водой с мылом или обрабатывайте их спиртосодержащим антисептиком для рук.\n
        Держитесь на безопасном расстоянии от чихающих или кашляющих людей. Носите маску, когда находитесь в окружении других людей.\n
        Не прикасайтесь руками к глазам, рту или носу. При кашле или чихании прикрывайте рот и нос локтевым сгибом или платком. Если вы чувствуете недомогание, оставайтесь дома.\n
        В случае повышения температуры, появления кашля и одышки обратитесь за медицинской помощью.</string>

</resources>