<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/medicineListFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/main_menu" />
        <item
            android:id="@+id/catalogFragment"
            android:icon="@drawable/ic_hamburger"
            android:title="@string/catalog" />
        <item
            android:id="@+id/orderFragment"
            android:icon="@drawable/ic_order"
            android:title="@string/orders" />
        <item
            android:id="@+id/covidFragment"
            android:icon="@drawable/ic_covid_19"
            android:title="@string/pandemic" />
        <item
            android:id="@+id/basketFragment"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/favoriteListFragment"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/userProfileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/aboutServiceFragment"
            android:icon="@drawable/ic_about_service"
            android:title="@string/about_service" />
    </group>
</menu>