<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.basket.MakeBankCardFragment">

        <ScrollView
            android:id="@+id/scroll_view"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="@dimen/padding_margin_xlarge">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/number_bank_card_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_xlarge"
                    android:hint="@string/number_bank_card">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/number_bank_card_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLength="16"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/card_validity_period_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_xlarge"
                    android:hint="@string/bank_card_validity_period">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/card_validity_period_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="date"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_xlarge"
                    android:hint="@string/name_bank_card">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_num_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:digits="абвгдеёжзийклмнопрстуфхцчшщъьыэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЬЫЭЮЯ"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/second_name_num_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_xlarge"
                    android:hint="@string/second_name_bank_card">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/second_name_num_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:digits="абвгдеёжзийклмнопрстуфхцчшщъьыэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЬЫЭЮЯ"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_make_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_margin_medium"
                    android:layout_marginTop="@dimen/padding_margin_medium"
                    android:layout_marginEnd="@dimen/padding_margin_medium"
                    android:layout_marginBottom="@dimen/padding_margin_xlarge"
                    android:text="@string/make_order"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>