<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.basket.MakeOrderFragment">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="@dimen/padding_margin_xlarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_xlarge"
                    android:hint="Ваше имя*">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textAutoComplete"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_xlarge"
                    android:hint="@string/your_number_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/street_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_xlarge"
                    android:hint="@string/street">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/street_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:digits="абвгдеёжзийклмнопрстуфхцчшщъьыэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЬЫЭЮЯ."
                        android:inputType="textAutoComplete"
                        android:maxLength="14"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/house_num_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_xlarge"
                    android:hint="@string/house_housing">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/house_num_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="4"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/entrance_num_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_xlarge"
                    android:hint="@string/entrance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/entrance_num_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/apartment_num_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_xlarge"
                    android:hint="@string/apartment">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/apartment_num_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/order_comment_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="@dimen/padding_margin_xlarge"
                    android:hint="@string/order_comment">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/order_comment_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:paddingStart="@dimen/padding_margin_xlarge"
                        android:paddingTop="@dimen/padding_margin_xlarge"
                        android:paddingEnd="@dimen/padding_margin_xlarge"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_margin_small">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/make_order"
                        style="@style/LoginTheme"
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/padding_margin_small"
                        android:layout_height="@dimen/auth_button_height"
                        android:text="@string/make_order"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>