<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.home.MedicineListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_medicine_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_medicine_list" />

        <com.google.android.material.progressindicator.ProgressIndicator
            android:id="@+id/progress_bar_medicine_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/color_error"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_view_medicine_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_margin_small"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/data_no_loading"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_retry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry"
            style="@style/LoginTheme"
            android:layout_width="150dp"
            android:layout_height="@dimen/auth_button_height"
            android:text="@string/repeat_load"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_empty"
            android:layout_width="407dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/no_data_for_query"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>